--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vee-validate": "2.0.0-beta.17",
     "vue": "^2.2.2",
     "vue-async-computed": "^3.0.1",
+    "vue-carousel": "^0.8.1",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1",
