--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@14four/armory-scripts": "^0.1.16",
     "debug": "^2.6.3",
+    "lodash": "^4.17.10",
     "moment": "^2.17.1",
     "plyr": "^2.0.12",
     "socket.io-client": "^2.0.1",
