--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@14four/armory-scripts": "^0.1.16",
+    "axios": "^0.18.0",
     "debug": "^2.6.3",
     "lodash": "^4.17.10",
     "moment": "^2.17.1",
