--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node_modules/nodemon/bin/nodemon.js index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +15,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "github:mysqljs/mysql"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
