--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mysql": "^2.15.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.1",
     "opn": "^4.0.2",
