--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   "dependencies": {
     "@14four/armory-scripts": "^0.1.16",
     "axios": "^0.18.0",
+    "client-sessions": "^0.8.0",
     "debug": "^2.6.3",
     "email-validator": "^2.0.4",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "moment": "^2.17.1",
+    "net": "^1.0.2",
+    "password-hash": "^1.2.2",
     "plyr": "^2.0.12",
     "socket.io-client": "^2.0.1",
+    "tls": "0.0.1",
     "tween.js": "^16.6.0",
     "vee-validate": "2.0.0-beta.17",
     "vue": "^2.2.2",
@@ -69,7 +75,7 @@
     "http-proxy-middleware": "^0.17.3",
     "ifdef-loader": "^1.1.1",
     "inject-loader": "^2.0.1",
-    "karma": "^1.4.1",
+    "karma": "^2.0.4",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -80,8 +86,8 @@
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "mysql": "^2.15.0",
-    "nightwatch": "^0.9.12",
-    "node-sass": "^4.5.1",
+    "nightwatch": "^1.0.6",
+    "node-sass": "^4.9.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
@@ -93,7 +99,7 @@
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.0.1",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
